# BJTU_OLLVM

./: QuickStart.sh  README.md  sensitive_api  sensitive_api_project.initial_combined.ll  sensitive_api_project.ll
Test/: CryptoUtils.ll  encrypt.cpp  encrypt.ll
Transforms/: CMakeLists.txt
Transforms/include/: CryptoUtils.h
Transforms/src/: CryptoUtils.cpp  GlobalsEncryption.cpp
